[package]
name = "aya-rustc-llvm-proxy"
version = "0.9.0"
authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
description = "Dynamically proxy LLVM calls into Rust own shared library"
license = "MIT"
keywords = ["llvm"]
categories = ["development-tools::build-utils", "external-ffi-bindings"]
repository = "https://github.com/aya-rs/rustc-llvm-proxy"
readme = "README.md"
edition = "2021"

[dependencies]
once_cell = "1.18.0"
libc = "0.2"
libloading = "0.8.0"
llvm-sys = { version = "170", features = [
    "no-llvm-linking",
    "disable-alltargets-init",
] }

[build-dependencies]
anyhow = "1.0.72"
cargo_metadata = "0.18.0"
prettyplease = "0.2.10"
quote = "1.0.29"
syn = { version = "2.0.26", features = ["full"] }
